--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,6 @@ dependencies:
   connectivity: ^0.4.9+5
   cupertino_icons: ^1.0.0
   dots_indicator: ^1.0.0
-  easy_localization: ^3.0.2
   # facebook_audience_network: ^0.7.1
   firebase_analytics: ^6.0.2
   firebase_admob: ^0.10.0+2
@@ -45,14 +44,14 @@ dependencies:
   html_unescape: ^1.0.1+3
   http: ^0.12.2
   image_picker: ^0.6.7+12
-  intl: ^0.18.1
+  intl: ^0.16.0
   launch_review: ^2.0.0
   line_icons: ^0.2.0
   md2_tab_indicator: ^1.0.2
   package_info: ^0.4.0+16
   provider: ^4.3.2+2
   share: ^0.6.5+3
-  shared_preferences: ^2.0.0
+  shared_preferences: ^0.5.12+2
   skeleton_text: ^1.0.0
   sliding_up_panel: ^0.3.5
   toast: ^0.1.5
