--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
 
   apple_sign_in: ^0.1.0
+  easy_localization: ^2.1.0
   animated_bottom_navigation_bar: ^0.1.2+2
   cached_network_image: ^2.3.3
   carousel_pro: ^1.0.0
